--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -1,3 +1,12 @@
+html body {
+	width: 100%;
+	height: 100%;
+	margin: 0 0 0 0;
+	font-family: medium-content-sans-serif-font, -apple-system,
+		BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .flex-container {
 	display: -webkit-flex;
 	display: flex;
@@ -16,13 +25,8 @@
 	text-align: left;
 }
 
-header {
-	background: black;
-	color: white;
-}
-
 footer {
-	background: #aaa;
+	background: #353535;
 	color: white;
 }
 
@@ -57,4 +61,8 @@ footer {
 		-webkit-order: 3;
 		order: 3;
 	}
+}
+
+.test {
+	color: red;
 }
